# vulkan-playground

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  clean.sh  run.sh
dependencies/: .gitignore  fetch.sh
src/: main.c
src/public/: qq.h
src/shaders/: shader.frag  shader.vert
